--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/xml2js": "^0.4.14",
+    "lucide-react": "^0.400.0",
+    "next": "14.2.4",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "recharts": "^2.12.7",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
